--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -312,6 +312,7 @@ dependencies {
 
     implementation project(':shared')
     implementation project(':androidshared')
+    implementation project(':smap')
     implementation project(':nbistubs')
     implementation project(':icons')
     implementation project(':strings')
