--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -161,6 +161,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            res.srcDirs += 'src/smap/res'
+        }
+    }
+
     signingConfigs {
         release {
             if (secrets.getProperty('RELEASE_STORE_FILE')) {
