Make smap main the main page

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -104,9 +104,13 @@ the specific language governing permissions and limitations under the License.
         </activity>
 
         <activity
-            android:name=".mainmenu.MainMenuActivity"
+            android:name="au.smap.fieldTask.activities.SmapMain"
             android:theme="@style/Theme.Collect.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:configChanges="locale"
+            android:screenOrientation="unspecified"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
