FIX NFC permissions, database version and default connection settings

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@ the specific language governing permissions and limitations under the License.
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.NFC" />
 
     <!--
         Since we use Scoped Storage, we should not need this permission. However, we discovered that
@@ -67,6 +68,9 @@ the specific language governing permissions and limitations under the License.
         android:required="false" />
     <uses-feature
         android:name="android.hardware.screen.portrait"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.nfc"
         android:required="false" />
 
     <supports-screens
