--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -84,7 +84,7 @@ the specific language governing permissions and limitations under the License.
     <application
         android:name=".application.Collect"
         android:allowBackup="true"
-        android:icon="@drawable/notes"
+        android:icon="@mipmap/ic_launcher"
         android:installLocation="auto"
         android:label="@string/collect_app_name"
         android:largeHeap="true"
