--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -86,7 +86,7 @@ the specific language governing permissions and limitations under the License.
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:installLocation="auto"
-        android:label="@string/collect_app_name"
+        android:label="@string/app_name"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
