Initial migration of nfc, geocompound and form widgets from FT4

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -170,6 +170,10 @@ the specific language governing permissions and limitations under the License.
             android:theme="@style/Theme.Collect"
             tools:replace="android:theme" />
         <activity
+            android:name="org.odk.collect.geo.geocompound.GeoCompoundActivity"
+            android:theme="@style/Theme.Collect"
+            tools:replace="android:theme" />
+        <activity
             android:name="org.odk.collect.errors.ErrorActivity"
             android:theme="@style/Theme.Collect"
             tools:replace="android:theme" />
