--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -174,6 +174,17 @@ the specific language governing permissions and limitations under the License.
             android:theme="@style/Theme.Collect"
             tools:replace="android:theme" />
         <activity
+            android:name="au.smap.fieldTask.activities.NFCActivity"
+            android:theme="@style/Theme.Collect"
+            android:launchMode="singleTop"
+            android:exported="true"
+            tools:replace="android:theme">
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="org.odk.collect.errors.ErrorActivity"
             android:theme="@style/Theme.Collect"
             tools:replace="android:theme" />
