Add refresh on swipe

--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -378,6 +378,7 @@ dependencies {
 
     implementation libs.androidxPreferenceKtx
     implementation libs.androidxFragmentKtx
+    implementation libs.androidxSwiperefreshlayout
 
     implementation libs.androidFlexbox
 
