--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -96,6 +96,7 @@ slf4jTimber = { group = "com.arcao", name = "slf4j-timber", version = "3.1" }
 emojiJava = { group = "com.vdurmont", name = "emoji-java", version = "5.1.1" }
 jsonSchemaValidator = { group = "com.networknt", name = "json-schema-validator", version = "1.5.9" }
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version = "1.0.1" }
+androidxSwiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version = "1.1.0" }
 cameraxCore = { group = "androidx.camera", name = "camera-core", version.ref = "camerax" }
 cameraxView = { group = "androidx.camera", name = "camera-view", version.ref = "camerax" }
 cameraxLifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camerax" }
