--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -505,10 +505,11 @@ dependencies {
         exclude group: 'org.robolectric' // Some tests in `collect_app` don't work with newer Robolectric
     }
 
-    // Real LeakCanary for debug and selfSigned builds only: notifications, analysis, etc
+    // Real LeakCanary for debug builds only: notifications, analysis, etc
+    // Note: removed selfSignedRelease - LeakCanary's ViewModelClearedWatcher crashes on Android 7
+    // with NullPointerException on Intent Parcel during activity transitions
     debugImplementation libs.leakcanary
     debugImplementation(libs.androidXComposeTooling)
-    selfSignedReleaseImplementation libs.leakcanary
 }
 
 // Fix OSS licenses plugin task dependencies for Gradle 9.0
